fix text align style for the content in

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -64,11 +64,12 @@
 }
 
 .aboutInnerWrapper {
+  box-sizing: border-box;
   position: absolute;
   display: flex;
   bottom: 5%;
   justify-content: center;
-  min-width: 300px;
+  min-width: 250px;
   overflow-y: scroll;
   width: 100%;
 }
@@ -154,6 +155,11 @@
     top: 25%;
   }
   .aboutInnerWrapper {
+    display: flex;
+    justify-content: center;
     top: 15%;
+  }
+  .aboutLink {
+    text-align: center;
   }
 }
